Fix Hidden Footer if Left Menu Visible

--- a/style.css
+++ b/style.css
@@ -225,6 +225,10 @@ ul,ol{
 	padding-left: 60px;
 }
 
+.site-footer{
+	padding: 0 20px;
+}
+
 
 /*--------------------------------------------------------------
 ## Posts and pages
